res/css/views/rooms/_EventTile.scss
/* ... */
.mx_GenericEventListSummary:not([data-layout=bubble]) .mx_EventTile_line {
    padding-left: $left-gutter;
}

.mx_EventTile:not([data-layout=bubble]).mx_EventTile_info .mx_EventTile_line,
.mx_GenericEventListSummary:not([data-layout=bubble]) > .mx_GenericEventListSummary_unstyledList > .mx_EventTile_info .mx_EventTile_avatar ~ .mx_EventTile_line {
    padding-left: calc($left-gutter + 20px); // override padding-left $left-gutter
}

/* all the overflow-y: hidden; are to trap Zalgos -
   but they introduce an implicit overflow-x: auto.
   so make that explicitly hidden too to avoid random
   horizontal scrollbars occasionally appearing, like in
   https://github.com/vector-im/vector-web/issues/1154 */
.mx_EventTile_content {
    overflow-y: hidden;
    overflow-x: hidden;
    margin-right: 34px;
}

/* Spoiler stuff */
.mx_EventTile_spoiler {
    cursor: pointer;
}

.mx_EventTile_spoiler_reason {
    color: $event-timestamp-color;
    font-size: $font-11px;
}

.mx_EventTile_spoiler_content {
    filter: blur(5px) saturate(0.1) sepia(1);
    transition-duration: 0.5s;
}

.mx_EventTile_spoiler.visible > .mx_EventTile_spoiler_content {
    filter: none;
}

.mx_RoomView_timeline_rr_enabled {
    .mx_EventTile[data-layout=group] {

        .mx_ThreadInfo,
        .mx_ThreadSummaryIcon,
        .mx_EventTile_line {
            /* ideally should be 100px, but 95px gives us a max thumbnail size of 800x600, which is nice */
            margin-right: 110px;
        }

        .mx_ThreadInfo {
            max-width: min(calc(100% - $left-gutter - 110px), 600px); // leave space on both left & right gutters
        }
    }

    // on ELS we need the margin to allow interaction with the expand/collapse button which is normally in the RR gutter
}

.mx_DisambiguatedProfile {
    cursor: pointer;
}

.mx_EventTile_bubbleContainer {
    display: grid;
    grid-template-columns: 1fr 100px;

    .mx_EventTile_line {
        margin-right: 0;
        grid-column: 1 / 3;
        // override default padding of mx_EventTile_line so that we can be centered
        padding: 0 !important;
    }

    .mx_EventTile_msgOption {
        grid-column: 2;
    }

    &:hover {
        .mx_EventTile_line {
            // To avoid bubble events being highlighted
            background-color: inherit !important;
        }
    }
}

.mx_EventTile_readAvatars {
    position: relative;
    display: inline-block;
    width: 14px;
    height: 14px;
    // This aligns the avatar with the last line of the
    // message. We want to move it one line up - 2.2rem
    top: -2.2rem;
    user-select: none;
    z-index: 1;
}

.mx_EventTile_readAvatars .mx_BaseAvatar {
    position: absolute;
    display: inline-block;
    height: $font-14px;
    width: $font-14px;

    will-change: left, top;
    transition:
        left var(--transition-short) ease-out,
        top var(--transition-standard) ease-out;
}

.mx_EventTile_readAvatarRemainder {
    color: $event-timestamp-color;
    font-size: $font-11px;
    position: absolute;
}

.mx_EventTile_bigEmoji {
    font-size: 48px;
    line-height: 57px;

    .mx_Emoji {
        font-size: inherit !important;
    }
}

.mx_EventTile_content .mx_EventTile_edited {
    user-select: none;
    font-size: $font-12px;
    color: $roomtopic-color;
    display: inline-block;
    margin-left: 9px;
    cursor: pointer;
}

.mx_EventTile_content .mx_EventTile_pendingModeration {
    user-select: none;
    font-size: $font-12px;
    color: $roomtopic-color;
    display: inline-block;
    margin-left: 9px;
}

.mx_EventTile_e2eIcon {
    position: relative;
    width: 14px;
    height: 14px;
    display: block;
    opacity: 0.2;
    background-repeat: no-repeat;
    background-size: contain;

    &::before,
    &::after {
        content: "";
        display: block;
        position: absolute;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
        mask-repeat: no-repeat;
        mask-position: center;
        mask-size: contain;
    }

    &::before {
        mask-repeat: no-repeat;
        mask-position: center;
        mask-size: 80%;
    }
}

.mx_EventTile_e2eIcon_warning {
    &::after {
        mask-image: url('$(res)/img/e2e/warning.svg');
        background-color: $alert;
    }

    opacity: 1;
}

.mx_EventTile_e2eIcon_normal {
    &::after {
        mask-image: url('$(res)/img/e2e/normal.svg');
        background-color: $header-panel-text-primary-color;
    }

    opacity: 1;
}

/* Various markdown overrides */

.mx_EventTile_body {
    a:hover {
        text-decoration: underline;
    }

    pre {
        border: 1px solid transparent;
    }

    // selector wrongly applies to pill avatars but those have explicit width/height passed at a higher specificity
    &.markdown-body img {
        object-fit: contain;
        object-position: left top;
    }
}

.mx_EventTile_clamp {
    .mx_EventTile_body {
        -webkit-line-clamp: 2;
        -webkit-box-orient: vertical;
        overflow: hidden;
        text-overflow: ellipsis;
        display: -webkit-box;
    }
}
/* ... */

